src/objects/CatalogoSeccion__c.object
<CustomObject>
    <fields>
        <fullName>ExternalSectionID__c</fullName>
        <defaultValue>001</defaultValue>
        <externalId>true</externalId>
        <label>ExternalSectionID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumeroSeccion__c</fullName>
        <label>Número de Sección</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catálogo Seccion</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Número de Catálogo Secciones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catálogo Secciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>